name:                Octree
version:             0.5.4.3
stability:           beta
homepage:            https://github.com/mgajda/octree
package-url:         http://hackage.haskell.org/package/octree
synopsis:            Simple unbalanced Octree for storing data about 3D points
description:         Octree data structure is relatively shallow data structure for space partitioning.
category:            Data
license:             BSD3
license-file:        LICENSE
extra-source-files:  changelog

author:              Michal J. Gajda
copyright:           Copyright by Michal J. Gajda '2012
maintainer:          mjgajda@googlemail.com
bug-reports:         mailto:mjgajda@googlemail.com


build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC==7.6.3,GHC==7.8.3

source-repository head
  type:     git
  location: git@github.com:mgajda/octree.git

Library
   build-depends:    base >=4.0 && < 4.10,
                     AC-Vector >= 2.3.0,
                     QuickCheck >= 2.4.0
 
   exposed-modules:  Data.Octree
   other-modules:    Data.Octree.Internal
                     Data.Octree.BoundingBox.BoundingBox
                     Data.Octree.BoundingBox.Internal
   exposed:          True
   extensions:       ScopedTypeVariables

Test-suite test_Octree
  Type:              exitcode-stdio-1.0
  build-depends:     base >=4.0 && < 4.10,
                     hspec == 2.2.3,
                     AC-Vector >= 2.3.0,
                     QuickCheck >= 2.4.0

  hs-source-dirs:    ., Data, tests                   
  Main-is:           Main.hs
  other-modules:     PropTests.Octree
                     Data.Octree
                     Data.Octree.Internal
                     Data.Octree.BoundingBox.BoundingBox
                     Data.Octree.BoundingBox.Internal
                     PropTests.Common
                     PropTests.OctreeTests.Exposed
                     PropTests.OctreeTests.Internal
                     PropTests.BoundingBoxTests.BoundingBoxTests
                     PropTests.BoundingBoxTests.Utilities
Test-suite readme
  type:           exitcode-stdio-1.0
  -- We have a symlink: README.lhs -> README.md
  main-is:        README.lhs
  Build-depends:  base >=4.0 && < 4.10,
                  AC-Vector >= 2.3.0,
                  QuickCheck >= 2.4.0,
                  markdown-unlit
  ghc-options:    -pgmL markdown-unlit
  other-modules:  Data.Octree
                  Data.Octree.Internal

Test-suite readme-BB
  type:           exitcode-stdio-1.0
  hs-source-dirs: .
  main-is:        Data/Octree/BoundingBox/README.lhs
  Build-depends:  base >=4.0 && < 4.10,
                  AC-Vector >= 2.3.0,
                  QuickCheck >= 2.4.0,
                  random == 1.1,
                  random-shuffle,
                  markdown-unlit

  ghc-options:    -pgmL markdown-unlit
  other-modules:  Data.Octree
                  Data.Octree.Internal
                  Data.Octree.BoundingBox.BoundingBox
                  Data.Octree.BoundingBox.Internal
